--- a/validator/client/BUILD.bazel
+++ b/validator/client/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "aggregate.go",
         "attest.go",
+        "execution_payload.go",
         "execution_payload_header.go",
         "key_reload.go",
         "log.go",
@@ -107,6 +108,7 @@ go_test(
         "aggregate_test.go",
         "attest_test.go",
         "execution_payload_header_test.go",
+        "execution_payload_test.go",
         "key_reload_test.go",
         "metrics_test.go",
         "payload_attestation_test.go",
