--- a/testing/validator-mock/BUILD.bazel
+++ b/testing/validator-mock/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "//api/client/event:go_default_library",
         "//consensus-types/primitives:go_default_library",
         "//consensus-types/validator:go_default_library",
+        "//proto/engine/v1:go_default_library",
         "//proto/prysm/v1alpha1:go_default_library",
         "//validator/client/iface:go_default_library",
         "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
