--- a/consensus-types/wrapper/BUILD.bazel
+++ b/consensus-types/wrapper/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/prysmaticlabs/prysm/v5/consensus-types/wrapper",
     visibility = ["//visibility:public"],
     deps = [
+        "//encoding/bytesutil:go_default_library",
         "//proto/prysm/v1alpha1:go_default_library",
         "//proto/prysm/v1alpha1/metadata:go_default_library",
         "//runtime/version:go_default_library",
