--- a/config/params/BUILD.bazel
+++ b/config/params/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "mainnet_config.go",
         "minimal_config.go",
         "network_config.go",
+        "testnet_custom_network_config.go",
         "testnet_e2e_config.go",
         "testnet_holesky_config.go",
         "testnet_sepolia_config.go",
