--- a/beacon-chain/p2p/peers/scorers/BUILD.bazel
+++ b/beacon-chain/p2p/peers/scorers/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "bad_responses.go",
         "block_providers.go",
         "gossip_scorer.go",
+        "log.go",
         "peer_status.go",
         "service.go",
     ],
@@ -21,6 +22,7 @@ go_library(
         "//proto/prysm/v1alpha1:go_default_library",
         "@com_github_libp2p_go_libp2p//core/peer:go_default_library",
         "@com_github_pkg_errors//:go_default_library",
+        "@com_github_sirupsen_logrus//:go_default_library",
     ],
 )
 
