--- a/consensus-types/light-client/BUILD.bazel
+++ b/consensus-types/light-client/BUILD.bazel
@@ -23,6 +23,7 @@ go_library(
         "//proto/prysm/v1alpha1:go_default_library",
         "//runtime/version:go_default_library",
         "//time/slots:go_default_library",
+        "@com_github_pkg_errors//:go_default_library",
         "@org_golang_google_protobuf//proto:go_default_library",
     ],
 )
