--- a/beacon-chain/state/state-native/BUILD.bazel
+++ b/beacon-chain/state/state-native/BUILD.bazel
@@ -25,7 +25,6 @@ go_library(
         "hasher.go",
         "multi_value_slices.go",
         "proofs.go",
-        "readonly_validator.go",
         "setters_attestation.go",
         "setters_block.go",
         "setters_checkpoint.go",
@@ -64,6 +63,7 @@ go_library(
         "//consensus-types/blocks:go_default_library",
         "//consensus-types/interfaces:go_default_library",
         "//consensus-types/primitives:go_default_library",
+        "//consensus-types/validator:go_default_library",
         "//container/multi-value-slice:go_default_library",
         "//container/slice:go_default_library",
         "//container/trie:go_default_library",
@@ -103,7 +103,6 @@ go_test(
         "hasher_test.go",
         "mvslice_fuzz_test.go",
         "proofs_test.go",
-        "readonly_validator_test.go",
         "references_test.go",
         "setters_attestation_test.go",
         "setters_churn_test.go",
