--- a/consensus-types/validator/BUILD.bazel
+++ b/consensus-types/validator/BUILD.bazel
@@ -3,20 +3,29 @@ load("@prysm//tools/go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "custom_types.go",
+        "readonly_validator.go",
         "types.go",
     ],
     importpath = "github.com/prysmaticlabs/prysm/v5/consensus-types/validator",
     visibility = ["//visibility:public"],
-    deps = ["//consensus-types/primitives:go_default_library"],
+    deps = [
+        "//config/fieldparams:go_default_library",
+        "//consensus-types/interfaces:go_default_library",
+        "//consensus-types/primitives:go_default_library",
+        "//proto/prysm/v1alpha1:go_default_library",
+        "@com_github_pkg_errors//:go_default_library",
+    ],
 )
 
 go_test(
     name = "go_default_test",
-    srcs = ["custom_types_test.go"],
-    embed = [":go_default_library"],
+    srcs = ["readonly_validator_test.go"],
     deps = [
+        ":go_default_library",
+        "//config/fieldparams:go_default_library",
+        "//consensus-types/primitives:go_default_library",
+        "//proto/prysm/v1alpha1:go_default_library",
+        "//testing/assert:go_default_library",
         "//testing/require:go_default_library",
-        "@io_k8s_apimachinery//pkg/util/yaml:go_default_library",
     ],
 )
