fixing access list transactions"

--- a/testing/endtoend/components/eth1/BUILD.bazel
+++ b/testing/endtoend/components/eth1/BUILD.bazel
@@ -28,12 +28,14 @@ go_library(
         "//testing/endtoend/types:go_default_library",
         "//testing/middleware/engine-api-proxy:go_default_library",
         "//testing/util:go_default_library",
+        "@com_github_ethereum_go_ethereum//:go_default_library",
         "@com_github_ethereum_go_ethereum//accounts/abi/bind:go_default_library",
         "@com_github_ethereum_go_ethereum//accounts/keystore:go_default_library",
         "@com_github_ethereum_go_ethereum//common:go_default_library",
         "@com_github_ethereum_go_ethereum//core/types:go_default_library",
         "@com_github_ethereum_go_ethereum//crypto/kzg4844:go_default_library",
         "@com_github_ethereum_go_ethereum//ethclient:go_default_library",
+        "@com_github_ethereum_go_ethereum//ethclient/gethclient:go_default_library",
         "@com_github_ethereum_go_ethereum//rpc:go_default_library",
         "@com_github_holiman_uint256//:go_default_library",
         "@com_github_mariusvanderwijden_fuzzyvm//filler:go_default_library",
