--- a/beacon-chain/core/epbs/BUILD.bazel
+++ b/beacon-chain/core/epbs/BUILD.bazel
@@ -28,6 +28,7 @@ go_library(
         "//runtime/version:go_default_library",
         "//time/slots:go_default_library",
         "@com_github_pkg_errors//:go_default_library",
+        "@com_github_sirupsen_logrus//:go_default_library",
     ],
 )
 
